fixed footer and search bar overlap

--- a/src/App.css
+++ b/src/App.css
@@ -61,8 +61,8 @@ footer.page-footer .footer-copyright {
 }
 
 .footer {
+  position: absolute;
   bottom: 0;
-  left: 0;
   width: 100%;
 }
 
